Major update to book templates and new chapter
